@@ -160,12 +160,10 @@ public class MenuBarMGraph extends JMenuBar implements ActionListener {
 		subMenu.add(makeMenuItem("Graph II from Ferber et al. (2011)", "ferber2011b"));
 		exampleMenu.add(subMenu);
 		
-		if (Configuration.getInstance().getGeneralConfig().experimentalFeatures()) {
-			subMenu = new JMenu("Entangled graphs");		
-			subMenu.add(makeMenuItem("Entangled Graph I from Maurer et al. (2012)", "entangled1"));
-			subMenu.add(makeMenuItem("Entangled Graph II from Maurer et al. (2012)", "entangled2"));
-			exampleMenu.add(subMenu);
-		}
+		subMenu = new JMenu("Entangled graphs");		
+		subMenu.add(makeMenuItem("Entangled Graph I from Maurer et al. (2012)", "entangled1"));
+		subMenu.add(makeMenuItem("Entangled Graph II from Maurer et al. (2012)", "entangled2"));
+		exampleMenu.add(subMenu);
 		
 		exampleMenu.add(makeMenuItem("Browse archive of user submitted graphs", "userSubmitted"));
 	}
@@ -181,13 +179,13 @@ public class MenuBarMGraph extends JMenuBar implements ActionListener {
 		extraMenu.add(makeMenuItem("Log", "showLog", KeyEvent.VK_L));
 		extraMenu.add(makeMenuItem("Report error", "reportError", KeyEvent.VK_R));
 		extraMenu.add(makeMenuItem("Submit your own graph to gMCP archive", "submitGraph"));
+		extraMenu.addSeparator();
+		extraMenu.add(makeMenuItem("Add entangled graph", "entangledGraphs"));	
 		if (System.getProperty("eclipse") != null) {		
 			extraMenu.add(makeMenuItem("Debug console", "debugConsole", KeyEvent.VK_D));
 		}
 		extraMenu.setMnemonic(KeyEvent.VK_E);
 		if (Configuration.getInstance().getGeneralConfig().experimentalFeatures()) {
-			extraMenu.addSeparator();
-			extraMenu.add(makeMenuItem("Add entangled graph", "entangledGraphs"));
 			//extraMenu.add(makeMenuItem("Adaptive Designs", "adaptiveDesigns"));
 		}
 	}
