@@ -1,6 +1,9 @@
 Changes in version 0.8-7 (??-0?-2014)
 =====================================
 
+- Support for entangled graphs is no longer highly experimental, 
+  but enabled as default.
+
 - For entangled graphs there is now more than one tab showing the graph:
   The first tab still shows the combined graphs and then a separate tab
   for each graph follows.
